refactor: limpiar code smells y actualizar sintaxis de Java